--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="./index.js"></script>
 </head>
 <body>
-    <h1> Asalamualekum </h1>
-    <h2> Welcome to Madina Dates</h2>
+    Hello World
+
+    <var>age = 5</var>
+    <var>a = age</var>
+
 
 </body>
 </html>
