--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 <body>
     in the World
 
+    <h1>Salam</h1>
+    <img src="salam.jpg" alt="Salam" width="460" height="345">
+
+
+
     <h1>
     <p>Click the button to display the date.</p>
 </h1>
